--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,25 @@
 controllers:
     resource: ../src/Controller/
     type: attribute
+# the "app_lucky_number" route name is not important yet
+app_status:
+    path: /status
+    controller: App\Controller\StatusController::status
+app_ping:
+    path: /ping
+    controller: App\Controller\PingController::ping
+app_attention:
+    path: /attention
+    controller: App\Controller\QueueController::attention
+app_pick_next:
+    path: /pick_next
+    controller: App\Controller\QueueController::pick_next
+app_queue:
+    path: /queue
+    controller: App\Controller\QueueController::queue
+app_report_summay:
+    path: /summary
+    controller: App\Controller\ReportController::summary
+app_dash:
+    path: /
+    controller: App\Controller\IndexController::index
